--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,7 +1,17 @@
 /*Page Structure*/
 
 .container {
-	width: 60%;
+	width: 75%;
+}
+
+.container.secondary {
+	background-color: #404040;
+	padding: 4px 25px;
+	width: 100%;
+}
+
+div.userProfile {
+	padding: 30px 0;
 }
 
 /*Images*/
@@ -65,11 +75,18 @@ span.loggedInUser {
 input.search {
 	background-color: #565656;
 	border-color: #6d6d6d;
+	color: #dfdfdf;
+	height: 30px;
 }
 
 button.search {
 	background-color: #a28e09;
 	border-color: #6d6d6d;
+	height: 30px;
+}
+
+.glyphicon-search {
+	top: 1px;
 }
 
 /*Text*/
