Vote functionality complete. Added some user statistics

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -15,13 +15,20 @@ div.userProfile {
 }
 
 /*Images*/
+.noVote {
+	opacity: .5;
+}
+
+.vote {
+	opacity: 1;
+}
+
+/*Navbar*/
 #navbar-brand {
 	width: 125px;
 	padding-top: 0;
 	margin-top: 0;
 }
-
-/*Navbar*/
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:active, .navbar-default .navbar-nav .open .dropdown-menu > li > a, .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:active, .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
 	background-color: #333132;
@@ -68,25 +75,32 @@ ul.nav.navbar-nav.navbar-right a.welcomeLoggedInUser.dropdown-toggle {
 	border-radius: 0;
 }
 
+.navbar-form {
+	display: inline-block;
+}
+
 span.loggedInUser {
 	font-weight: bold;
 }
 
 input.search {
-	background-color: #565656;
-	border-color: #6d6d6d;
+	background-color: #333132;
+	border-color: #444;
 	color: #dfdfdf;
 	height: 30px;
+	font-size: .85em;
 }
 
 button.search {
 	background-color: #a28e09;
-	border-color: #6d6d6d;
+	border-color: #444;
 	height: 30px;
+	width: 10px;
 }
 
 .glyphicon-search {
-	top: 1px;
+	top: 0px;
+	right: 7px;
 }
 
 /*Text*/
@@ -112,7 +126,31 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Roboto Slab', serif;
 }
 
+h1 {
+	font-size: 1.85em;
+}
+
+h2 {
+	font-size: 1.75em;
+}
+
+h3 {
+	font-size: 1.65em;
+}
+
+h4 {
+	font-size: 1.55em;
+}
+
+p.voteCount {
+	margin: 10px 0;
+}
+
 p.postStats {
 	font-size: .65em;
 	color: #6d6d6d;
+}
+
+.empty {
+	margin-top: 20px;
 }
